--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Chess"
         tools:targetApi="31">
         <activity
+            android:name=".FreeMode"
+            android:exported="false" />
+        <activity
+            android:name=".NoTimerGame"
+            android:exported="false" />
+        <activity
             android:name=".TimerGame"
             android:exported="false" />
         <activity
